--- a/client/bower.json
+++ b/client/bower.json
@@ -10,7 +10,8 @@
     "angular-resource": "1.2.6",
     "angular-cookies": "1.2.6",
     "angular-sanitize": "1.2.6",
-    "angular-route": "1.2.6"
+    "angular-route": "1.2.6",
+    "lodash": "https://raw.github.com/lodash/lodash/2.4.1/dist/lodash.js"
   },
   "devDependencies": {
     "angular-mocks": "1.2.6",
