--- a/client/bower.json
+++ b/client/bower.json
@@ -11,7 +11,9 @@
     "angular-cookies": "1.2.6",
     "angular-sanitize": "1.2.6",
     "angular-route": "1.2.6",
-    "lodash": "https://raw.github.com/lodash/lodash/2.4.1/dist/lodash.js"
+    "angular-animate": "1.2.6",
+    "lodash": "",
+    "angular-ui-bootstrap": "~0.10.0"
   },
   "devDependencies": {
     "angular-mocks": "1.2.6",
