--- a/client/bower.json
+++ b/client/bower.json
@@ -13,7 +13,7 @@
     "angular-route": "1.2.6",
     "angular-animate": "1.2.6",
     "lodash": "",
-    "angular-ui-bootstrap": "~0.10.0"
+    "angular-bootstrap": "~0.10.0"
   },
   "devDependencies": {
     "angular-mocks": "1.2.6",
