--- a/client/package.json
+++ b/client/package.json
@@ -31,7 +31,9 @@
     "karma-ng-html2js-preprocessor": "~0.1.0",
     "karma-ng-scenario": "~0.1.0",
     "grunt-karma": "~0.6.2",
-    "grunt-connect-proxy": "~0.1.7"
+    "grunt-connect-proxy": "~0.1.7",
+    "karma-coverage": "~0.2.0",
+    "karma-story-reporter": "~0.2.2"
   },
   "engines": {
     "node": ">=0.8.0"
