--- a/client/bower.json
+++ b/client/bower.json
@@ -13,7 +13,9 @@
     "angular-route": "1.2.6",
     "angular-animate": "1.2.6",
     "lodash": "",
-    "angular-bootstrap": "~0.10.0"
+    "angular-bootstrap": "~0.10.0",
+    "angular-growl-notifications": "~0.7.0",
+    "animate.css": "~3.1.0"
   },
   "devDependencies": {
     "angular-mocks": "1.2.6",
